fixed alignment issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,10 @@
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
+#root {
+  width: 100%;
+}
+
 body {
   background-color: #282c34;
 }
@@ -283,7 +287,7 @@ tr:nth-child(even) {
 }
 
 .bp3-divider {
-  width: 100%;
+  width: 95%;
 }
 
 .passwords {
